--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
         <div class="child-banner">
           <h1 class="fw-semibold">Innovate your business with AI-powered talent</h1>
           <p class="text-xl-start fw-bold">Turing uses proprietary AI to help companies build enterprise applications, train and enhance LLMs, and hire on-demand technical professionals.</p>
-          <button class="btn btn-primary p-2 mt-4">Get Started</button>
+          <button class="btn btn-primary p-2 mt-4git push -u origin main">Get Started</button>
         </div>
       </div>
      </section>
