added enterprise section

--- a/index.html
+++ b/index.html
@@ -287,13 +287,13 @@
       </div>
      </section>
 
-     <!-- add -->
+     <!-- ads -->
       <section class="ad">
         <div class="row container">
-          <div class="col-6 p-2">
+          <div class="col-md-6 p-2">
             <img src="./assets//profile.avif" alt="profile">
           </div>
-          <div class="col-6 mt-5 p-5">
+          <div class="col-md-6 mt-md-3 p-md-5">
             <p>For LLM companies and research organizations</p>
             <h1>Train and enhance <br> high-quality LLMs</h1>
             <p>Accelerate your LLM's reasoning and coding capabilities with expert model training. Generate high-quality, proprietary human data for SFT, RLHF, and DPO.</p>
@@ -301,8 +301,9 @@
           </div>
         </div>
       </section>
+
 <!-- cards -->
-<section class="cards bg-body-secondary">
+<section class="bg-body-secondary p-5">
   <div class="container">
 <div class="heading">
   <div class="row container mt-4 p-5">
@@ -316,8 +317,7 @@
     </div>
   </div>
 </div>
-
-<div class="d-flex justify-content-around gap-4 card-container">
+<div class="d-flex justify-content-around gap-4 card-container mt-5">
   <div class="card">
     <div class="card-front">
      <h3>Customized enterprise LLMs</h3>
@@ -346,5 +346,46 @@
 
 </div>
 </section>
+
+<!-- for enteripise -->
+ <section>
+  <div class="position-relative w-100">
+    <img src="./assets//enter.avif" alt="enter" class="object-fit-cover w-100">
+    <div class="row position-absolute top-0 text-light mt-5 ms-5 p-md-3">
+      <p>For enterprises and startups</p>
+      <div class="col-md-6">
+        <h1 class="fs-1 fw-md-semibold">Scale your software development team on demand</h1>
+        <p>Accelerate your software engineering and close skill gaps with our AI-vetted technical professionals.</p>
+        <div class="row">
+          <div class="col-6">
+            <h4>Hire individuals</h4>
+            <p>Find the right professionals from the world's largest network of vetted developers, data scientists, LLM trainers, and more.</p>
+          </div>
+          <div class="col-6">
+            <h4>Hire technical teams</h4>
+            <p>Build an agile team of professionals—seamlessly integrated into your organization and workflows.</p>
+          </div>
+        </div>
+        <button class="btn btn-primary p-md-3 mt-3 fw-semibold">Hire Professionals</button>
+        <br>
+        <small>2-week free trial available.</small>
+      </div>
+      <div class="col-md-6"></div>
+    </div>
+  </div>
+ </section>
+
+ <!-- ai section -->
+  <section class="bg-black text-white">
+    <div class="p-5">
+      <h1 class="text-center">Accelerating innovation with <br> AI-powered <span class="text-primary">
+        implementation
+      </span>
+        </h1>
+        <div class="container">
+
+        </div>
+    </div>
+  </section>
   </body>
 </html>
