--- a/index.html
+++ b/index.html
@@ -308,11 +308,11 @@
   <div class="container">
 <div class="heading">
   <div class="row container mt-4 p-5">
-    <div class="col-6">
+    <div class="col-md-6">
       <p>For enterprise companies</p>
       <h1>Build and implement GenAI into your business</h1>
     </div>
-    <div class="col-6">
+    <div class="col-md-6">
       <p>Accelerate your customer success, internal productivity, market share, and more with GenAI technology.</p>
       <button class="btn btn-dark p-2 mt-2">Learn More</button>
     </div>
