--- a/index.html
+++ b/index.html
@@ -378,9 +378,9 @@
 
  <!-- ai section -->
  <section class="bg-black text-white ai">
-  <div class="p-5">
+
       <h1 class="text-center">Accelerating innovation with <br> AI-powered <span class="text-primary">implementation</span></h1>
-      <div class="container containercn">
+      <div class="container containercn mb-0">
           <div class="cards">
               <div class="cards-cn">
                   <p class="percentage">95% trial success rate</p>
@@ -408,8 +408,179 @@
               <p class="info">3 million+ <br> technical professionals</p>
               <p class="description">from 150 countries available through our network</p>
           </div>
+          <!-- <div class="d-flex w-100">
+            <div class="cards w-100">
+              <div class="cards-cn w-100">
+                <h1>100+ skills and technologies</h1>
+                <p>across 15+ job types and 7+ seniority levels</p>
+              </div>
+            </div>
+          </div> -->
       </div>
+    </section>
+ <!-- google-->
+  <section class="bg-light-subtle text-black mt-4">
+    <div class="container text-center m-lg-5 row">
+      <div class="col-md-6">
+        <h1>Turing increases developer productivity by over 30%</h1>
+      </div>
+      <div class="col-md-6">
+        <img src="./assets//google.svg" alt="">
+        <p>Discover how Turing and Google are transforming the way businesses work through Google Gemini (formerly Duet AI).
+        </p>
+      </div>
+    </div>
+    <div class="text-center">
+      <iframe width="1305" height="630" src="https://www.youtube.com/embed/zbuA2QEwF_E" title="Turing increases developer productivity by over 30% with Duet AI" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    </div>
+  </section>
+
+  <!-- discover roi -->
+   <section class="mt-0 text-white w-100" style="background-image: url(./assets/bg.avif);">
+    <div class="d-flex justify-content-center gap-5 w-100 flex-lg-row">
+      <div class="w-50 mt-5 p-5 ms-5">
+        <h1 class="fw-bold">Discover your ROIwith GenAI
+        </h1>
+        <p>Efficient strategies make LLM training and development success possible.</p>
+        <p>Empower your research teams without sacrificing your budget or business goals with our tips on strategic use, development of minimum viable models, and prompt engineering for a variety of applications.</p>
+        <button class="btn btn-light">Download</button>
+      </div>
+      <div class="w-50">
+<img src="./assets/card.avif" alt="card" width="
+600px">
+      </div>
+    </div>
+   </section>
+<!-- accelearate -->
+ <section style="background-image: url(./assets/bg-2.avif); background-size: cover;" class="text-white p-5 h-75">
+  <div class="pt-5 w-50 ms-5">
+    <h1>Want to accelerate your business with AI?</h1>
+    <p>Talk to one of our solutions architects and start innovating with AI-powered talent.</p>
+    <button class="btn btn-primary">Get Started</button>
   </div>
-</section>
+ </section>
+
+<!-- Footer -->
+<footer class="text-center text-lg-start bg-black text-white">
+  <!-- Section: Social media -->
+  <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
+    <!-- Left -->
+    <div class="me-5 d-none d-lg-block">
+      <span>Get connected with us on social networks:</span>
+    </div>
+    <!-- Left -->
+
+    <!-- Right -->
+    <div>
+      <a href="" class="me-4 text-reset">
+        <i class="fab fa-facebook-f"></i>
+      </a>
+      <a href="" class="me-4 text-reset">
+        <i class="fab fa-twitter"></i>
+      </a>
+      <a href="" class="me-4 text-reset">
+        <i class="fab fa-google"></i>
+      </a>
+      <a href="" class="me-4 text-reset">
+        <i class="fab fa-instagram"></i>
+      </a>
+      <a href="" class="me-4 text-reset">
+        <i class="fab fa-linkedin"></i>
+      </a>
+      <a href="" class="me-4 text-reset">
+        <i class="fab fa-github"></i>
+      </a>
+    </div>
+    <!-- Right -->
+  </section>
+  <!-- Section: Social media -->
+
+  <!-- Section: Links  -->
+  <section class="">
+    <div class="container text-center text-md-start mt-5">
+      <!-- Grid row -->
+      <div class="row mt-3">
+        <!-- Grid column -->
+        <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+          <!-- Content -->
+          <h6 class="text-uppercase fw-bold mb-4">
+            <i class="fas fa-gem me-3"></i>Company name
+          </h6>
+          <p>
+            Here you can use rows and columns to organize your footer content. Lorem ipsum
+            dolor sit amet, consectetur adipisicing elit.
+          </p>
+        </div>
+        <!-- Grid column -->
+
+        <!-- Grid column -->
+        <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+          <!-- Links -->
+          <h6 class="text-uppercase fw-bold mb-4">
+            Products
+          </h6>
+          <p>
+            <a href="#!" class="text-reset">Angular</a>
+          </p>
+          <p>
+            <a href="#!" class="text-reset">React</a>
+          </p>
+          <p>
+            <a href="#!" class="text-reset">Vue</a>
+          </p>
+          <p>
+            <a href="#!" class="text-reset">Laravel</a>
+          </p>
+        </div>
+        <!-- Grid column -->
+
+        <!-- Grid column -->
+        <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+          <!-- Links -->
+          <h6 class="text-uppercase fw-bold mb-4">
+            Useful links
+          </h6>
+          <p>
+            <a href="#!" class="text-reset">Pricing</a>
+          </p>
+          <p>
+            <a href="#!" class="text-reset">Settings</a>
+          </p>
+          <p>
+            <a href="#!" class="text-reset">Orders</a>
+          </p>
+          <p>
+            <a href="#!" class="text-reset">Help</a>
+          </p>
+        </div>
+        <!-- Grid column -->
+
+        <!-- Grid column -->
+        <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+          <!-- Links -->
+          <h6 class="text-uppercase fw-bold mb-4">Contact</h6>
+          <p><i class="fas fa-home me-3"></i> New York, NY 10012, US</p>
+          <p>
+            <i class="fas fa-envelope me-3"></i>
+            info@example.com
+          </p>
+          <p><i class="fas fa-phone me-3"></i> + 01 234 567 88</p>
+          <p><i class="fas fa-print me-3"></i> + 01 234 567 89</p>
+        </div>
+        <!-- Grid column -->
+      </div>
+      <!-- Grid row -->
+    </div>
+  </section>
+  <!-- Section: Links  -->
+
+  <!-- Copyright -->
+  <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
+    © 2021 Copyright:
+    <a class="text-reset fw-bold" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+  </div>
+  <!-- Copyright -->
+</footer>
+<!-- Footer -->
   </body>
 </html>
