--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
 
   <!-- discover roi -->
    <section class="mt-0 text-white w-100" style="background-image: url(./assets/bg.avif);">
-    <div class="d-flex justify-content-center gap-5 w-100 flex-lg-row">
+    <div class="d-flex justify-content-center gap-5 w-100 flex-lg-row flex-sm-column">
       <div class="w-50 mt-5 p-5 ms-5">
         <h1 class="fw-bold">Discover your ROIwith GenAI
         </h1>
